--- a/example/resources/en/render-index.yaml
+++ b/example/resources/en/render-index.yaml
@@ -34,6 +34,7 @@ asset_index:
     closeLabel: "Close"
     configTitle: "Configurations"
     creditsAndLicense: "Credits and License"
+    appVersionLabel: "Version"
 
     errorDialogTitle: "Error"
     loadEbusyMessage: "Something went wrong when loading the level. Please close all programs that are openning files managed by git and try again"
