--- a/example/course-resources/fork/zh-Hant/level-data/intro-open-repository-index.yaml
+++ b/example/course-resources/fork/zh-Hant/level-data/intro-open-repository-index.yaml
@@ -88,7 +88,7 @@ asset_index:
       .md
       成功開啟之後，${{t/gui}}中應該會出現類似下圖紅框圈選的範圍，這個叫作${{t/graph-f}}
 
-      ![illustration]({{images/fork-open-basic}})  
+      ![illustration]({{images/open-basic}})  
 
       請計算出現在你的${{t/gui}}中的${{t/graph}}上，圓圈的數量，並回答在下方的欄位中  
     
