--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "pack": "webpack --config webpack.config.js --mode production",
     "pack-dev": "webpack --config webpack.config.js --mode development",
     "bake-fork": "npm run \"load-native-node\" && node ./dev/course-maker.js bake-course ./example \"/\" fork ./test/resources/repo-archive",
-    "build-win64": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --ignore=\"^/\\.module_cache/\" --ignore=\"^/test\" --ignore=\"^/playground\" --ignore=\"^/bake\" --ignore=\"^/drawings\" --ignore\"^/dev\" --ignore=\"^/lib\" --ignore\"^/src\" --out=\"out\"",
+    "build-win64": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --ignore=\"^/\\.module_cache/\" --ignore=\"^/test\" --ignore=\"^/playground\" --ignore=\"^/bake\" --ignore=\"^/drawings\" --ignore=\"^/dev\" --ignore=\"^/src\" --ignore=\"^/example/execution\" --out=\"out\"",
     "build-win64-dev": "npm run \"load-native-electron\" && electron-packager . intergitive --platform=win32 --arch=x64 --prune=false",
     "build-pack-win64": "npm run \"load-native-electron\" && npm run pack && npm run build-win64",
     "load-native-node": "node \"./dev/module-switch.js\" load nodegit node",
