Fix course validity failures

--- a/example/course-resources/fork/en/images-index.yaml
+++ b/example/course-resources/fork/en/images-index.yaml
@@ -12,7 +12,7 @@ asset_index:
           - fork-folded
           - fork-choose-open-repository
           - fork-select-repository-location
-          - fork-open-basic
+          - open-basic
           - folder-history-change
           - graph-fork
           - select-last-commit
