--- a/example/course-resources/fork/zh-Hant/level-data/checkout-revision-index.yaml
+++ b/example/course-resources/fork/zh-Hant/level-data/checkout-revision-index.yaml
@@ -175,7 +175,7 @@ asset_index:
       相信你已經非常嫻熟於如何切換${{t/work-tree}}到不同版本上了  
 
       到這裡你或許會開始好奇，在上一個章節中，我們學習了如何瀏覽過往的${{t/file-tree}}  
-      並且學習了可以從${{t/gui}}的${{t/file-tree-gui}}介面中窺探特定檔案在過往版本的內容  
+      並且學習了可以從${{t/gui}}的${{st/file-tree-gui}}介面中窺探特定檔案在過往版本的內容  
       既然如此，我們有需要把資料夾切換回特定的版本嗎？  
 
       實際上是有的。主要有兩種目的  
